[tool.poetry]
name = "vending-machine"
version = "0.1.0"
description = ""
authors = ["M. Balfroid <martin.balfroid@unamur.be>"]
readme = "README.md"
packages = [{include = "vending_machine"}]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
nose = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
